--- a/GJL_2021_NameTBD/Packages/manifest.json
+++ b/GJL_2021_NameTBD/Packages/manifest.json
@@ -1,11 +1,13 @@
 {
   "dependencies": {
+    "com.replicastudios.link": "file:D:/GitHub/GJL_2021_TBD/GJL_2021_NameTBD/Packages/replica-unity-link-v0.0.1.tgz",
     "com.unity.2d.animation": "5.0.5",
     "com.unity.2d.pixel-perfect": "4.0.1",
     "com.unity.2d.psdimporter": "4.0.2",
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.2d.spriteshape": "5.1.2",
     "com.unity.2d.tilemap": "1.0.0",
+    "com.unity.2d.tilemap.extras": "https://github.com/Unity-Technologies/2d-extras.git#2020.3",
     "com.unity.cinemachine": "2.6.5",
     "com.unity.collab-proxy": "1.5.7",
     "com.unity.ide.rider": "2.0.7",
@@ -46,7 +48,6 @@
     "com.unity.modules.video": "1.0.0",
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
-    "com.unity.modules.xr": "1.0.0",
-    "com.unity.2d.tilemap.extras": "https://github.com/Unity-Technologies/2d-extras.git#2020.3"
+    "com.unity.modules.xr": "1.0.0"
   }
 }
